bnf.txt
UcLetter = "A".."Z"
Digit = "0".."9"
None = ""

Number = [("+"|"-")] Digit { Digit }
Real = Number ["." Digit {Digit}]
Double = ("1" | "2")
Color = ("B" | "W")
SimpleText = { any character (handling see below) }
Text = {any character (handling see below) }
Point = game-specific
Move = game-specific
Stone = game-specific
Compose = ValueType ":" ValueType
GameTree = "(" Sequence { GameTree } ")"
Collection = GameTree { GameTree }
Sequence = Node { Node }
Node = ";" { Property }
Property = PropIdent PropValue { PropValue }
PropIdent = UcLetter { UcLetter }
PropValue = "[" CValueType "]"
CValueType = (ValueType | Compose)
ValueType = (None | Number | Real | Double | Color | SimpleText | Text | Point | Move | Stone)
